; ModuleID = '/home/carl/AnghaBench/git/extr_branch.c_find_tracked_branch.c'
source_filename = "/home/carl/AnghaBench/git/extr_branch.c_find_tracked_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.remote = type { i32 }
%struct.tracking = type { i32, %struct.TYPE_2__, i32*, i32 }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.remote*, i8*)* @find_tracked_branch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_tracked_branch(%struct.remote* %0, i8* %1) #0 {
  %3 = alloca %struct.remote*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tracking*, align 8
  store %struct.remote* %0, %struct.remote** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.tracking*
  store %struct.tracking* %7, %struct.tracking** %5, align 8
  %8 = load %struct.remote*, %struct.remote** %3, align 8
  %9 = load %struct.tracking*, %struct.tracking** %5, align 8
  %10 = getelementptr inbounds %struct.tracking, %struct.tracking* %9, i32 0, i32 1
  %11 = call i32 @remote_find_tracking(%struct.remote* %8, %struct.TYPE_2__* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %45, label %13

13:                                               ; preds = %2
  %14 = load %struct.tracking*, %struct.tracking** %5, align 8
  %15 = getelementptr inbounds %struct.tracking, %struct.tracking* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 8
  %18 = icmp eq i32 %17, 1
  br i1 %18, label %19, label %31

19:                                               ; preds = %13
  %20 = load %struct.tracking*, %struct.tracking** %5, align 8
  %21 = getelementptr inbounds %struct.tracking, %struct.tracking* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load %struct.tracking*, %struct.tracking** %5, align 8
  %25 = getelementptr inbounds %struct.tracking, %struct.tracking* %24, i32 0, i32 2
  store i32* %23, i32** %25, align 8
  %26 = load %struct.remote*, %struct.remote** %3, align 8
  %27 = getelementptr inbounds %struct.remote, %struct.remote* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.tracking*, %struct.tracking** %5, align 8
  %30 = getelementptr inbounds %struct.tracking, %struct.tracking* %29, i32 0, i32 3
  store i32 %28, i32* %30, align 8
  br label %41

31:                                               ; preds = %13
  %32 = load %struct.tracking*, %struct.tracking** %5, align 8
  %33 = getelementptr inbounds %struct.tracking, %struct.tracking* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32*, i32** %34, align 8
  %36 = call i32 @free(i32* %35)
  %37 = load %struct.tracking*, %struct.tracking** %5, align 8
  %38 = getelementptr inbounds %struct.tracking, %struct.tracking* %37, i32 0, i32 2
  %39 = load i32*, i32** %38, align 8
  %40 = call i32 @FREE_AND_NULL(i32* %39)
  br label %41

41:                                               ; preds = %31, %19
  %42 = load %struct.tracking*, %struct.tracking** %5, align 8
  %43 = getelementptr inbounds %struct.tracking, %struct.tracking* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  store i32* null, i32** %44, align 8
  br label %45

45:                                               ; preds = %41, %2
  ret i32 0
}

declare dso_local i32 @remote_find_tracking(%struct.remote*, %struct.TYPE_2__*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @FREE_AND_NULL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
